--- a/lib/aDogcion_web/templates/page/index.html.heex
+++ b/lib/aDogcion_web/templates/page/index.html.heex
@@ -4,6 +4,9 @@
 </section>
 
 <section class="row">
+  <h1 class="text-3xl font-bold underline text-green-600">
+    Hello world!
+  </h1>
   <article class="column">
     <h2>Resources</h2>
     <ul>
